infra/k8s/deployments/bot-deployment.yaml
## backend-deployment.yaml
## in this file a template for pods for app:bot are defined
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-app
  template:
    metadata:
      labels:
        app: bot-app
    spec:
      containers:
        - name: bot-image
          image: jscc76/silas-bot
