infra/k8s/deployments/submissions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: submissions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: submissions
  template:
    metadata:
      labels:
        app: submissions
    spec:
      # volumes:
      # - name: task-pv-storage
      #   persistentVolumeClaim:
      #     claimName: task-pv-claim
      containers:
        - name: submissions
          image: jscc76/silas-submissions
          # volumeMounts:
          # - mountPath: "/submission_data"
          #   name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name:  submissions-srv
spec:
  selector:
    app: submissions
  ports:
    - name: submissions
      protocol: TCP
      port: 8002
      targetPort: 8002
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: task-pv-volume
#   labels:
#     type: local
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 10Gi
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     path: "/mnt/data"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: task-pv-claim
# spec:
#   storageClassName: manual
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 3Gi
